scrollbars all fixed

--- a/css/addtask.css
+++ b/css/addtask.css
@@ -540,7 +540,7 @@ input:focus {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  margin-top: -10px;
+  margin-top: 120px;
   margin-right: 8px;
 }
 
